# cc-relay

./: .gitignore  .mcp.json  README.en.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
.claude/skills/: relay.md
cc_relay/: __main__.py  db.py  decision.py  hook.py  installer.py  notifier.py  server.py
cc_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
relay/: __main__.py  assessor.py  db.py  decision.py  hook.py  installer.py  notifier.py  server.py
relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_assessor.py  test_db.py  test_hook.py  test_installer.py  test_server.py
