[project]
name = "cc-relay"
version = "0.1.1"
description = "Intelligent interrupt layer for Claude — learns when to ask, when to proceed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "mcp[cli]>=1.27.1",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
macos = ["pyobjus>=1.2.4"]

[project.urls]
Homepage = "https://github.com/solost23/relay"
Repository = "https://github.com/solost23/relay"

[project.scripts]
relay = "relay.server:main"
cc-relay = "relay.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
